tests/error/comptime/pointer_difference_null2.bz
// error: invalid pointer difference of a non-null and null pointer with type '?*const int32'
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p: ?*int32 = null;
		let i = 0;
		&i - p;
	});
}
